changes to remove unnecessary files

--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.journaldev</groupId>
-    <artifactId>java-word-count</artifactId>
+    <groupId>com.anz</groupId>
+    <artifactId>ITF</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -97,7 +97,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.geekcap.javaworld.sparkexample.WordCount</mainClass>
+                            <mainClass>com.anz.itf.RunValidations</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
