--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.anz</groupId>
     <artifactId>ITF</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>anz-code-challenge-UBER</version>
     <packaging>jar</packaging>
 
     <properties>
