--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
+                            <classpathPrefix>target/</classpathPrefix>
                             <mainClass>com.anz.itf.RunValidationsMain</mainClass>
                         </manifest>
                     </archive>
