--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,13 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>target/</classpathPrefix>
+                            <mainClass>com.anz.itf.validation.RunValidationsMain</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
 
                 <executions>
